api.yamlの定義を見直し
