# api.yaml
@@ -1,18 +1,13 @@
-openapi: "3.0.0"
+openapi: 3.0.3
 info:
-  version: 1.0.0
-  title: Swagger Petstore
-  description: A sample API that uses a petstore as an example to demonstrate features in the OpenAPI 3.0 specification
-  termsOfService: http://swagger.io/terms/
-  contact:
-    name: Swagger API Team
-    email: apiteam@swagger.io
-    url: http://swagger.io
+  version: 0.0.1
+  title: simple open api
+  description: simple api service for lecture
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
 servers:
-  - url: http://PetResponsestore.swagger.io/api
+  - url: http://localhost:1232
 paths:
   /pets:
     get:
@@ -23,28 +18,9 @@ paths:
         Sed tempus felis lobortis leo pulvinar rutrum. Nam mattis velit nisl, eu condimentum ligula luctus nec. Phasellus semper velit eget aliquet faucibus. In a mattis elit. Phasellus vel urna viverra, condimentum lorem id, rhoncus nibh. Ut pellentesque posuere elementum. Sed a varius odio. Morbi rhoncus ligula libero, vel eleifend nunc tristique vitae. Fusce et sem dui. Aenean nec scelerisque tortor. Fusce malesuada accumsan magna vel tempus. Quisque mollis felis eu dolor tristique, sit amet auctor felis gravida. Sed libero lorem, molestie sed nisl in, accumsan tempor nisi. Fusce sollicitudin massa ut lacinia mattis. Sed vel eleifend lorem. Pellentesque vitae felis pretium, pulvinar elit eu, euismod sapien.
       operationId: findPets
       parameters:
-        - name: tags
-          in: query
-          description: tags to filter by
-          required: false
-          style: form
-          schema:
-            type: array
-            items:
-              type: string
-        - name: limit
-          in: query
-          description: maximum number of results to return
-          required: false
-          schema:
-            type: integer
-            format: int32
-        - name: order
-          in: query
-          description: maximum number of results to return
-          required: false
-          schema:
-            type: string
+        - $ref: "#/components/parameters/PetTags"
+        - $ref: "#/components/parameters/Order"
+        - $ref: "#/components/parameters/Limit"
       responses:
         '200':
           description: pet response
@@ -86,15 +62,9 @@ paths:
   /pets/{id}:
     get:
       description: Returns a user based on a single ID, if the user does not have access to the pet
-      operationId: find pet by id
+      operationId: findPetById
       parameters:
-        - name: id
-          in: path
-          description: ID of pet to fetch
-          required: true
-          schema:
-            type: integer
-            format: int64
+        - $ref: "#/components/parameters/ID"
       responses:
         '200':
           description: pet response
@@ -112,13 +82,7 @@ paths:
       description: deletes a single pet based on the ID supplied
       operationId: deletePet
       parameters:
-        - name: id
-          in: path
-          description: ID of pet to delete
-          required: true
-          schema:
-            type: integer
-            format: int64
+        - $ref: "#/components/parameters/ID"
       responses:
         '204':
           description: pet deleted
@@ -133,18 +97,12 @@ components:
     PetResponse:
       allOf:
         - $ref: '#/components/schemas/Pet'
-        - type: object
-          required:
-            - id
-          properties:
-            id:
-              type: integer
-              format: int64
     Pet:
       type: object
-      required:
-        - name
       properties:
+        id:
+          type: integer
+          format: int64
         name:
           type: string
         tag:
@@ -178,3 +136,38 @@ components:
           format: int32
         message:
           type: string
+  parameters:
+    ID:
+      name: id
+      in: path
+      description: data key
+      required: true
+      schema:
+        type: integer
+        format: int64
+    PetTags:
+      name: tags
+      in: query
+      description: tags to filter by
+      required: false
+      style: form
+      schema:
+        type: array
+        items:
+          type: string
+    Limit:
+      name: limit
+      in: query
+      description: maximum number of results to return
+      required: false
+      schema:
+        type: integer
+        format: int32
+    Order:
+      name: order
+      in: query
+      description: maximum number of results to return
+      required: false
+      schema:
+        type: string
+
