# internal/http/api.go
@@ -26,10 +26,10 @@ func (p *Api) AddPet(ctx echo.Context) error {
 	return p.pet.AddPet(ctx)
 }
 
-func (p *Api) FindPetById(ctx echo.Context, id int64) error {
-	return p.pet.FindPetById(ctx, id)
+func (p *Api) FindPetById(ctx echo.Context, id gen.ID) error {
+	return p.pet.FindPetById(ctx, id.Int64())
 }
 
-func (p *Api) DeletePet(ctx echo.Context, id int64) error {
-	return p.pet.DeletePet(ctx, id)
+func (p *Api) DeletePet(ctx echo.Context, id gen.ID) error {
+	return p.pet.DeletePet(ctx, id.Int64())
 }
